# CrazyCursor

./: .gitignore  README.md  crazy.py  pyproject.toml  runpy.bat  runpy_primeravez.bat
